--- a/template/head.jade
+++ b/template/head.jade
@@ -6,6 +6,7 @@ link(rel="stylesheet", type="text/css", href="{{assets}}/mdi/css/materialdesigni
 link(rel="stylesheet", type="text/css", href="{{assets}}/highlightjs/styles/monokai_sublime.css")
 link(rel="stylesheet", href="{{assets}}/template.css")
 link(rel="stylesheet", href="{{assets}}/content.css")
+link(rel="shortcut icon", href="{{assets}}/favicon.png")
 
 //Custom CSS
 if config.custom_css
